Phani | Update CSS to fix overlapping of scrollbar and ot blocks (#752)

--- a/ui/app/styles/ot/_otCalendar.scss
+++ b/ui/app/styles/ot/_otCalendar.scss
@@ -25,9 +25,12 @@
       box-sizing: border-box;
       text-align: center;
       float: left;
-      padding: 10px 0;
+      padding: 12px 0;
       border-bottom: 1px solid #ddd;
       font-family: OpenSansSemiBold;
+    }
+    hr{
+      margin-bottom: 0;
     }
   }
   .day-heading{
